[gd_scene load_steps=6 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Bullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=5]

[node name="Main" type="Node" index="0"]

script = ExtResource( 1 )
bullet = ExtResource( 2 )
enemy = ExtResource( 3 )

[node name="Player" parent="." index="0" instance=ExtResource( 4 )]

position = Vector2( 40, 300 )

[node name="BulletSponge" type="Node" parent="." index="1"]

[node name="EnemySpawner" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = true

[node name="EnemyBase" type="Node" parent="." index="3"]

editor/display_folded = true

[node name="Spawn" type="Position2D" parent="EnemyBase" index="0"]

position = Vector2( 1014.11, 57.7037 )

[node name="Spawn2" type="Position2D" parent="EnemyBase" index="1"]

position = Vector2( 1010.43, 477.59 )

[node name="Spawn3" type="Position2D" parent="EnemyBase" index="2"]

position = Vector2( 1011.66, 348.677 )

[node name="Spawn4" type="Position2D" parent="EnemyBase" index="3"]

position = Vector2( 1010.43, 265.191 )

[node name="Spawn5" type="Position2D" parent="EnemyBase" index="4"]

position = Vector2( 1014.11, 159.606 )

[node name="Spawn6" type="Position2D" parent="EnemyBase" index="5"]

position = Vector2( 1011.66, 558.621 )

[node name="Control" parent="." index="4" instance=ExtResource( 5 )]

[connection signal="shoot" from="Player" to="." method="_on_Player_shoot"]

[connection signal="timeout" from="EnemySpawner" to="." method="_on_EnemySpawner_timeout"]


